# Medicion-de-redundancia-en-musica

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo_melody.mid  sample_sequence.json  sample_sequence_2.json
music_entropy/: __init__.py  __main__.py  analysis.py  cli.py  encoding.py  entropy.py  loader_midi.py  loader_text.py  lzc.py  visualization.py
outputs/HIMNOS/batch/: HIMNOS_batch_results.csv  batch_results.csv
outputs/JAZZ/batch/: JAZZ_batch_results.csv  batch_results.csv
outputs/POP/batch/: POP_batch_results.csv  batch_results.csv
outputs/ROCK/batch/: ROCK_batch_results.csv  batch_results.csv
tests/: conftest.py  test_encoding.py  test_entropy.py  test_loaders.py  test_lzc.py  test_visualization.py
