[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-entropy"
version = "0.1.0"
description = "Music redundancy and entropy analysis toolkit."
authors = [{ name = "Codex AI" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mido>=1.3",
    "pandas>=1.5",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.3"]

[project.scripts]
music-entropy = "music_entropy.cli:main"
